<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drawerMenuMain"
        android:icon="@drawable/drawer_menu_main_24dp"
        android:title="@string/drawer_menu_main" />
    <item
        android:id="@+id/drawerMenuBank"
        android:icon="@drawable/drawer_menu_bank_24dp"
        android:title="@string/drawer_menu_bank" />
    <item
        android:id="@+id/drawerMenuCredit"
        android:icon="@drawable/drawer_menu_credit_24dp"
        android:title="@string/drawer_menu_credit" />
    <item
        android:id="@+id/drawerMenuInvoices"
        android:icon="@drawable/drawer_menu_invoices_24dp"
        android:title="@string/drawer_menu_invoices" />
    <item
        android:id="@+id/drawerMenuInstallments"
        android:icon="@drawable/drawer_menu_installments_24dp"
        android:title="@string/drawer_menu_installments" />
    <item
        android:id="@+id/drawerMenuResumes"
        android:icon="@drawable/drawer_menu_resumes_24dp"
        android:title="@string/drawer_menu_resumes" />
</menu>